# prism_fast_hostsub

./: .gitignore  convert_spec.py  cov_fromRussell.py  covmat.py  gen_snhost_sims.py  manual_tests.py  param_fit.py  pyproject.toml  test_conv_romanpsf.py  test_moffat1d.ipynb  user_config_1dhostsub.yaml
cloudcovpy_copilot_v1/: cov_v1.py
prismdata_notebook/: test_sim_prism_data.ipynb
